--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,13 +6,13 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
+    <width>1100</width>
     <height>628</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>1200</width>
+    <width>1100</width>
     <height>0</height>
    </size>
   </property>
@@ -205,28 +205,18 @@
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>1200</width>
-     <height>34</height>
-    </rect>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
    </property>
-   <widget class="QMenu" name="menu">
-    <property name="font">
-     <font>
-      <pointsize>13</pointsize>
-     </font>
-    </property>
-    <property name="title">
-     <string>开始</string>
-    </property>
-    <addaction name="action_open_new_database"/>
-    <addaction name="action_exit"/>
-   </widget>
-   <addaction name="menu"/>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="action_open_new_database"/>
+   <addaction name="action_exit"/>
   </widget>
   <action name="action_open_new_database">
    <property name="text">
