--- a/urecordeditdialog.ui
+++ b/urecordeditdialog.ui
@@ -34,7 +34,7 @@
          <property name="maximumSize">
           <size>
            <width>120</width>
-           <height>16777215</height>
+           <height>100</height>
           </size>
          </property>
          <property name="text">
@@ -43,7 +43,14 @@
         </widget>
        </item>
        <item>
-        <widget class="QPlainTextEdit" name="plainTextEdit_name"/>
+        <widget class="QPlainTextEdit" name="plainTextEdit_name">
+         <property name="maximumSize">
+          <size>
+           <width>16777215</width>
+           <height>100</height>
+          </size>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
@@ -133,12 +140,18 @@
             <property name="text">
              <string>是</string>
             </property>
+            <property name="checked">
+             <bool>false</bool>
+            </property>
            </widget>
           </item>
           <item>
            <widget class="QRadioButton" name="radioButton_n">
             <property name="text">
              <string>否</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
             </property>
            </widget>
           </item>
