完成：数据修改和删除

--- a/urecordeditdialog.ui
+++ b/urecordeditdialog.ui
@@ -182,7 +182,7 @@
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
-          <height>45</height>
+          <height>48</height>
          </size>
         </property>
        </spacer>
@@ -202,7 +202,7 @@
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
-          <height>45</height>
+          <height>48</height>
          </size>
         </property>
        </spacer>
@@ -222,7 +222,7 @@
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
-          <height>45</height>
+          <height>47</height>
          </size>
         </property>
        </spacer>
@@ -235,6 +235,29 @@
        </widget>
       </item>
       <item>
+       <spacer name="verticalSpacer_5">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>48</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_delete">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>删除</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="verticalSpacer_4">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -242,7 +265,7 @@
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
-          <height>238</height>
+          <height>128</height>
          </size>
         </property>
        </spacer>
